monitoria/mac323/5-3-24/grades/Gino-Chen_201304_assignsubmission_file_MEP25.txt
Mandou só os class e não os java. :/

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CCCCCCCC
EP: Gino-Chen_201304_assignsubmission_file_MEP25
NOTA: 0
CORREÇÃO AUTOMÁTICA
0 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
8 Testes com Erro de Compilação (incui o bônus)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
        ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
                            ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
2 errors
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
        ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
                            ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
2 errors
Compilation Error on Booyer
======= Brute_003 ============
BruteDoVictor.java:9: error: cannot find symbol
            for (int i : Brute.findAll(StdIn.readString(), pat))
                         ^
  symbol:   variable Brute
  location: class BruteDoVictor
1 error
Compilation Error on Brute
======= Brute_004 ============
BruteDoVictor.java:9: error: cannot find symbol
            for (int i : Brute.findAll(StdIn.readString(), pat))
                         ^
  symbol:   variable Brute
  location: class BruteDoVictor
1 error
Compilation Error on Brute
======= Brute_005 ============
BruteDoVictor.java:9: error: cannot find symbol
            for (int i : Brute.findAll(StdIn.readString(), pat))
                         ^
  symbol:   variable Brute
  location: class BruteDoVictor
1 error
Compilation Error on Brute
======= KMP_000 ============
KMPDoVictor.java:4: error: cannot find symbol
        KMP ex = new KMP(StdIn.readString());
        ^
  symbol:   class KMP
  location: class KMPDoVictor
KMPDoVictor.java:4: error: cannot find symbol
        KMP ex = new KMP(StdIn.readString());
                     ^
  symbol:   class KMP
  location: class KMPDoVictor
2 errors
Compilation Error on KMP
======= KMP_001 ============
KMPDoVictor.java:4: error: cannot find symbol
        KMP ex = new KMP(StdIn.readString());
        ^
  symbol:   class KMP
  location: class KMPDoVictor
KMPDoVictor.java:4: error: cannot find symbol
        KMP ex = new KMP(StdIn.readString());
                     ^
  symbol:   class KMP
  location: class KMPDoVictor
2 errors
Compilation Error on KMP
======= KMP_002 ============
KMPDoVictor.java:4: error: cannot find symbol
        KMP ex = new KMP(StdIn.readString());
        ^
  symbol:   class KMP
  location: class KMPDoVictor
KMPDoVictor.java:4: error: cannot find symbol
        KMP ex = new KMP(StdIn.readString());
                     ^
  symbol:   class KMP
  location: class KMPDoVictor
2 errors
Compilation Error on KMP
